--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
+    "lint": "SKIP_ENV_VALIDATION=1 next lint",
+    "start": "next start",
+    "db:dev": "prisma studio"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -26,6 +27,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "3.7.2",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
