--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,12 +5,6 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
-      - name: env
-        env:
-          ENV_FILE: ${{ secrets.ENV }}
-        run: |
-          echo $ENV_FILE | base64 --decode > .env
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -19,6 +13,9 @@ jobs:
         env:
           CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
           CYPRESS_RETRIES: 1
+          CYPRESS_DATABASE_URL: "postgresql://postgres:sppmdbpassword!123@db.ksapkpyzblzmnusrhtxk.supabase.co:5432/postgres"
+          CYPRESS_NEXTAUTH_URL: "http://localhost:3000"
+          CYPRESS_NEXTAUTH_SECRET: "T4IAJQ6DaK3N/Kf2UM2lQs1kzTkNhXGzopAQZ8BjuBU="
         with:
           build: npm run build
           start: npm start
