--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,20 +5,14 @@ jobs:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
-      - name: env
-        env:
-          ENV_FILE: ${{ secrets.ENV }}
-        run: |
-          echo $ENV_FILE | base64 --decode > .env
-
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Run Cypress
         uses: cypress-io/github-action@v5
         env:
-          CYPRESS_BASE_URL: ${{ github.event.deployment_status.target_url }}
-          CYPRESS_RETRIES: 1
+          BASE_URL: ${{ github.event.deployment_status.target_url }}
+          SKIP_ENV_VALIDATION: 1
         with:
           build: npm run build
           start: npm start
