--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,6 +8,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install Yarn
+        run: npm install -g yarn
+
       - name: Run Cypress
         uses: cypress-io/github-action@v5
         env:
