--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,5 +17,5 @@ jobs:
           BASE_URL: ${{ github.event.deployment_status.target_url }}
           SKIP_ENV_VALIDATION: 1
         with:
-          build: npm run build
-          start: npm start
+          build: NODE_ENV=test SKIP_ENV_VALIDATION=1 npm run build
+          start: NODE_ENV=test SKIP_ENV_VALIDATION=1 npm start
