--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "cross-env SKIP_ENV_VALIDATION=1 next lint",
     "start": "next start",
     "db:dev": "prisma studio",
-    "cypress": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 cypress open"
+    "cypress": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 cypress open",
+    "test:build": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 next build",
+    "test:start": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
