--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "next start",
     "db:dev": "prisma studio",
     "cypress": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 cypress open",
-    "test:build": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 next build",
-    "test:start": "cross-env NODE_ENV=test SKIP_ENV_VALIDATION=1 next start"
+    "test:build": "NODE_ENV=test SKIP_ENV_VALIDATION=1 next build",
+    "test:start": "NODE_ENV=test SKIP_ENV_VALIDATION=1 next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
