--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "cypress": "^12.17.0",
     "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.2",
